Atualizando pacotes, criando sistema de reuniões e avisos de eventos e realizando refatorações

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
 	"embedColor": "#1411d4",
 	"logChannel": "985611902241624145",
 	"mainGuild": "492748426270998529",
+	"meetingScheduleChannel": "888236220688269312",
 	"moderationGuild": "885018319936163941",
 	"moderationChannel" : "985611902241624145",
 	"newUserChannel": "893304927185678408",
