--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@discordjs/voice": "^0.10.0",
     "discord-api-types": "^0.36.1",
     "discord.js": "^13.1.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-schedule": "^2.1.0"
   }
 }
